--- a/learn.html
+++ b/learn.html
@@ -8,7 +8,7 @@
 	<title>Tracks & Strands</title>
 	<!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="../css/learn.css">
+	<link rel="stylesheet" type="text/css" href="learn.css">
 </head>
 <body>
 <body background=../assets/light.jpg bgcolor= "#C0C0C0";>
